[gd_scene load_steps=4 format=3 uid="uid://diemc0dp2hyb8"]

[ext_resource type="Script" path="res://Scripts/Socket.gd" id="1_vxcp7"]
[ext_resource type="Script" path="res://Scripts/debug.gd" id="2_ipkm1"]

[sub_resource type="LabelSettings" id="LabelSettings_usu76"]

[node name="SocketTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="in" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_vxcp7")
radius = 50.0
hole_color = Color(1, 1, 0, 1)
rest_color = Color(1, 1, 0, 1)
input = true

[node name="TextEdit" type="Label" parent="HBoxContainer/in" node_paths=PackedStringArray("debug_node")]
layout_mode = 2
offset_top = 4.0
offset_right = 1.0
offset_bottom = 27.0
label_settings = SubResource("LabelSettings_usu76")
script = ExtResource("2_ipkm1")
debug_node = NodePath("..")

[node name="in2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_vxcp7")
radius = 50.0
hole_color = Color(1, 1, 0, 1)
rest_color = Color(1, 1, 0, 1)
input = true

[node name="TextEdit" type="Label" parent="HBoxContainer/in2" node_paths=PackedStringArray("debug_node")]
layout_mode = 2
offset_top = 4.0
offset_right = 1.0
offset_bottom = 27.0
label_settings = SubResource("LabelSettings_usu76")
script = ExtResource("2_ipkm1")
debug_node = NodePath("..")

[node name="out2" type="Control" parent="HBoxContainer" node_paths=PackedStringArray("data")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_vxcp7")
radius = 50.0
hole_color = Color(0, 1, 1, 1)
data = NodePath(".")
rest_color = Color(0, 1, 1, 1)

[node name="TextEdit" type="Label" parent="HBoxContainer/out2" node_paths=PackedStringArray("debug_node")]
layout_mode = 2
offset_top = 4.0
offset_right = 1.0
offset_bottom = 27.0
label_settings = SubResource("LabelSettings_usu76")
script = ExtResource("2_ipkm1")
debug_node = NodePath("..")

[node name="out" type="Control" parent="HBoxContainer" node_paths=PackedStringArray("data")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_vxcp7")
radius = 50.0
hole_color = Color(0, 1, 1, 1)
data = NodePath(".")
rest_color = Color(0, 1, 1, 1)

[node name="TextEdit" type="Label" parent="HBoxContainer/out" node_paths=PackedStringArray("debug_node")]
layout_mode = 2
offset_top = 4.0
offset_right = 1.0
offset_bottom = 27.0
label_settings = SubResource("LabelSettings_usu76")
script = ExtResource("2_ipkm1")
debug_node = NodePath("..")

[node name="wire_holder" type="Node2D" parent="." groups=["wire_holder"]]
