[gd_scene load_steps=4 format=3 uid="uid://d2yq6hrbxh74d"]

[ext_resource type="Script" path="res://Scripts/Socket.gd" id="1_omk8n"]
[ext_resource type="PackedScene" uid="uid://ck7d7bmdy3mjj" path="res://Scenes/wire.tscn" id="2_5g5wa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13aho"]
radius = 50.0

[node name="out2" type="Area2D"]
position = Vector2(861, 456)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_omk8n")
wire_scene = ExtResource("2_5g5wa")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_13aho")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="create_wire" from="." to="." method="_on_create_wire"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pickup_jack" from="." to="." method="_on_pickup_jack"]
[connection signal="place_jack" from="." to="." method="_on_place_jack"]
